--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container m-auto max-w-(1200px) flex justify-between py-5 items-center">
+    <header class="container m-auto max-w-[1200px] flex justify-between py-5 items-center">
         <a href="#">
             <img src="./images/header11.svg" alt="logo" width="122">
         </a>
@@ -43,10 +43,10 @@
         </div>
     </header>
     <div class="bg-slate-700">
-        <div class="container m-auto max-w-(1200px)  pt-28">
+        <div class="container m-auto max-w-[1200px]  pt-28">
             <h1 class="text-center text-6xl font-bold text-white mb-5">виробництво <br> меблів</h1>
             <p class="text-center text-lg ont-medium text-white mb-24">Ми виконуємо комплексне виготовлення корпусних меблів <br> для житлових і комерційних приміщень, забезпечимо Вас <br> якісним меблевим продуктом власного виробництва. </p>
-            <button class=" text-white text-center bg-yellow-600 py-5 px-14 ml-96 hover:bg-yellow-700 transition mb-28  duration-500">Обговорити проект</button>
+            <button class=" text-white text-center bg-yellow-600 py-5 px-14 ml-[640px] hover:bg-yellow-700 transition mb-28  duration-500">Обговорити проект</button>
             <div class="w-full h-px bg-white"></div>
             <div class="flex justify-between mt-5 pb-9">
                 <div class="flex gap-6 cursor-pointer">
@@ -63,7 +63,7 @@
     </div>
     <main>
        
-        <div class="container m-auto max-w-(1200px)">
+        <div class="container m-auto max-w-[1200px]">
             <h2 class="text-center mt-36 text-5xl font-semibold text-black mb-20">Основні напрямки</h2>
             <div class="flex justify-between mb-36">
                 <div class="w-96 pl-7 border-l-2">
@@ -86,7 +86,7 @@
         </div>
     </main>
     <div class="bg-slate-700">
-        <div class="container m-auto max-w-(1200px) pt-20">
+        <div class="container m-auto max-w-[1200px] pt-20">
             <h2 class="text-center text-5xl font-semibold text-white mb-14 ">Ми забезпечемо вас </h2>
             <div class="flex gap-64 ml-96 mb-10">
                 <div class="text-center w-28">
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <div class="container m-auto max-w-(1200px) flex justify-between pt-20 mb-10">
+    <div class="container m-auto max-w-[1200px] flex justify-between pt-20 mb-10">
         <img src="./images/fon14.png" alt="font" width="160" height="200">
         <div>
             <h3 class="text-4xl font-semibold text-black mb-20 text-center">Проект Рінго Україна - створений виконувати <br> об`єктні задачі комплексного меблювання <br> житлових та комерційних приміщень. </h3>
@@ -135,7 +135,7 @@
         </div>
         <img src="./images/fon15.png" alt="photo" width="160" height="200">
     </div>
-    <div class="container m-auto max-w-(1200px) pt-20 relative">
+    <div class="container m-auto max-w-[1200px] pt-20 relative">
         <h2 class="text-center text-5xl font-semibold text-black mb-20">Наші переваги</h2>
         <div class="flex gap-96 border-y-2 pt-5 mb-10">
             <h5 class="text-2xl font-semibold text-slate-400  pr-96 ">01</h5>
@@ -174,7 +174,7 @@
                 <p class="text-base font-normal text-slate-500 mb-7 ">Ми відмовились від шоу-руму та офісу на користь <br> вартості та мобільності</p>
             </div>
         </div>
-        <img class="absolute top-96 left-40"  src="./images/top15.png" alt="foto" width="340">
+        <img class="absolute top-[470px] left-40"  src="./images/top15.png" alt="foto" width="340">
     </div>
 </body>
 </html>
