--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container m-auto max-w-[1200px]  pt-28">
             <h1 class="text-center text-6xl font-bold text-white mb-5">виробництво <br> меблів</h1>
             <p class="text-center text-lg ont-medium text-white mb-24">Ми виконуємо комплексне виготовлення корпусних меблів <br> для житлових і комерційних приміщень, забезпечимо Вас <br> якісним меблевим продуктом власного виробництва. </p>
-            <button class=" text-white text-center bg-yellow-600 py-5 px-14 ml-[640px] hover:bg-yellow-700 transition mb-28  duration-500">Обговорити проект</button>
+            <button class=" text-white text-center bg-yellow-600 py-5 px-14 ml-[480px] hover:bg-yellow-700 transition mb-28  duration-500">Обговорити проект</button>
             <div class="w-full h-px bg-white"></div>
             <div class="flex justify-between mt-5 pb-9">
                 <div class="flex gap-6 cursor-pointer">
@@ -86,9 +86,9 @@
         </div>
     </main>
     <div class="bg-slate-700">
-        <div class="container m-auto max-w-[1200px] pt-20">
+        <div class="container m-auto max-w-[1200px] pt-20 ">
             <h2 class="text-center text-5xl font-semibold text-white mb-14 ">Ми забезпечемо вас </h2>
-            <div class="flex gap-64 ml-96 mb-10">
+            <div class="flex gap-64 ml-[200px] mb-10">
                 <div class="text-center w-28">
                     <img class="" src="./images/fon11.svg" alt="fon" width="66">
                     <h5 class="text-2xl font-medium text-slate-900 ">  Меблями</h5>
@@ -102,17 +102,17 @@
                     <h5 class="text-2xl font-medium text-slate-900">  Побутовою технікою</h5>
                 </div>
             </div>
-            <div class="flex gap-64 ml-96 pb-10">
+            <div class="flex gap-64 ml-[200px] pb-10">
                 <div class="text-center w-28">
-                    <img class="" src="./images/fon11.svg" alt="fon" width="66">
+                    <img class="" src="./images/room.svg" alt="fon" width="68">
                     <h5 class="text-2xl font-medium text-slate-900 ">  Меблями</h5>
                 </div>
                 <div class="text-center w-28">
-                    <img src="./images/fon22.svg" alt="fon" width="46">
+                    <img src="./images/floor11.svg" alt="fon" width="68">
                     <h5 class="text-2xl font-medium text-slate-900"> Освітленням</h5>
                 </div>
                 <div class="text-center w-28">
-                    <img src="./images/fon33.svg" alt="fon" width="63">
+                    <img src="./images/toor11.svg" alt="fon" width="66">
                     <h5 class="text-2xl font-medium text-slate-900">  Побутовою технікою</h5>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                 <p class="text-base font-normal text-slate-500 mb-7 ">Ми відмовились від шоу-руму та офісу на користь <br> вартості та мобільності</p>
             </div>
         </div>
-        <img class="absolute top-[470px] left-40"  src="./images/top15.png" alt="foto" width="340">
+        <img class="absolute top-[520px] left-40"  src="./images/top15.png" alt="foto" width="340">
     </div>
 </body>
 </html>
